# wisp-hand

./: .gitignore  .gitmodules  Justfile  LICENSE  README.md  _TODO.md  justfile  mkdocs.yml  pyproject.toml
.codex/skills/openspec-apply-change/: SKILL.md
.codex/skills/openspec-archive-change/: SKILL.md
.codex/skills/openspec-explore/: SKILL.md
.codex/skills/openspec-propose/: SKILL.md
.codex/skills/openspec-verify-change/: SKILL.md
.github/workflows/: ci.yaml  deploy-pages.yaml  publish-pypi.yaml
docs/: ROADMAP.md  TASKS.md  TROUBLESHOOTING.md  example_config.toml
docs/mkdocs/: getting-started.md  index.md  installation.md  roadmap.md  tools.md  troubleshooting.md
docs/mkdocs/concepts/: coordinates.md  session-scope.md
docs/mkdocs/scenarios/: godot.md
examples/attempts/: diagnose_coordinates.py  smoke_mcp_transports.py  smoke_real_env.py
openspec/: config.yaml
openspec/changes/adaptive-coordinate-backends/: design.md  proposal.md  tasks.md
openspec/changes/add-batch-wait-diff/: design.md  proposal.md  tasks.md
openspec/changes/add-hyprland-observe-capture/: tasks.md
openspec/changes/add-ollama-vision-assist/: design.md  tasks.md
openspec/changes/add-rich-structlog-observability/: proposal.md  tasks.md
openspec/changes/add-scoped-input-safety/: tasks.md
openspec/changes/agent-token-efficient-mcp-surface/: proposal.md  tasks.md
openspec/changes/bootstrap-daemon-session-foundation/: tasks.md
openspec/changes/harden-mcp-beta-ready/: design.md  proposal.md  tasks.md
openspec/changes/token-efficient-desktop-topology/: design.md  tasks.md
openspec/specs/action-batch-runner/: spec.md
openspec/specs/hyprland-topology-observe/: spec.md
openspec/specs/input-safety-guardrails/: spec.md
openspec/specs/mcp-runtime-discovery/: spec.md
openspec/specs/mcp-task-augmented-execution/: spec.md
openspec/specs/observability-logging/: spec.md
openspec/specs/ollama-vision-assist/: spec.md
openspec/specs/runtime-config-and-audit/: spec.md
openspec/specs/runtime-operations-hardening/: spec.md
openspec/specs/runtime-package-architecture/: spec.md
openspec/specs/scoped-input-control/: spec.md
src/wisp_hand/: __init__.py  __main__.py  audit.py  capabilities.py  capture.py  cli.py  command.py  config.py  discovery.py  errors.py  hyprland.py  input_backend.py  mcp_app.py  models.py  observability.py  policy.py  resources.py  runtime.py  scope.py  server.py  session.py  tooling.py  vision.py
src/wisp_hand/app/: __init__.py  (+2 more)
src/wisp_hand_mcp/: __init__.py  __main__.py
tests/: test_adaptive_coordinate_backends.py  test_batch_wait_diff.py  test_foundation.py  test_observability_logging.py  test_observe_capture.py  test_retention_boundaries.py  test_runtime_discovery.py  test_scoped_input.py  test_task_augmented_execution.py  test_vision_assist.py
tests/batch/: test_batch_wait_diff.py
tests/capture/: test_observe_capture.py  test_retention_boundaries.py
tests/desktop/: test_adaptive_coordinate_backends.py
tests/input/: test_input_service.py  test_scoped_input.py
tests/integration/: test_foundation.py  test_observability_logging.py  test_runtime_discovery.py
tests/protocol/: test_task_augmented_execution.py
tests/session/: test_session_service.py
tests/vision/: test_vision_assist.py
(+102 files in other folders)
