[project]
name = "wisp-hand"
version = "0.1.0"
description = "Hyprland-first computer-use foundation for MCP clients (observe/capture/input/tasks)."
readme = "README.md"
authors = [
    { name = "straydragon", email = "straydragonl@foxmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.26,<2",
    "pillow>=11.2,<12",
    "rich>=14,<15",
    "structlog>=25,<26",
]

[project.scripts]
wisp-hand = "wisp_hand.cli:main"

[project.urls]
Homepage = "https://github.com/StrayDragon/wisp-hand"
Repository = "https://github.com/StrayDragon/wisp-hand"
Issues = "https://github.com/StrayDragon/wisp-hand/issues"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "pytest>=8.4,<9",
]
