[project]
name = "wisp-hand"
version = "0.1.2"
description = "Hyprland-first computer-use foundation for MCP clients (observe/capture/input/tasks)."
readme = "README.md"
authors = [
    { name = "straydragon", email = "straydragonl@foxmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.14"
keywords = [
    "mcp",
    "model-context-protocol",
    "hyprland",
    "wayland",
    "computer-use",
    "desktop-automation",
    "gui-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.26,<2",
    "pillow>=11.2,<12",
    "rich>=14,<15",
    "structlog>=25,<26",
]

[project.scripts]
wisp-hand = "wisp_hand.cli:main"

[project.urls]
Homepage = "https://github.com/StrayDragon/wisp-hand"
Repository = "https://github.com/StrayDragon/wisp-hand"
Issues = "https://github.com/StrayDragon/wisp-hand/issues"
Documentation = "https://straydragon.github.io/wisp-hand/"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
    "pytest>=8.4,<9",
]
